icon 및 스플래시 이미지 변경

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="splash_background_color">#9A77FF</color>
+    <color name="splash_background_color">#6E31DF</color>
 </resources>
