--- a/android/app/src/main/res/drawable-v21/launch_background.xml
+++ b/android/app/src/main/res/drawable-v21/launch_background.xml
@@ -3,7 +3,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/splash_background_color" />
 
-    <!-- You can insert your own image assets here -->
+    <!-- You can insert your own image fonts here -->
     <item>
         <bitmap
             android:gravity="center"
